@@ -7,6 +7,7 @@ import org.dpoqb.mongoquerybuilder.interfaces.IMongoQueryPredicateBuilder;
 import org.springframework.data.mongodb.core.query.Criteria;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
@@ -15,9 +16,9 @@ import java.util.stream.Collectors;
 
 public class MongoQueryPredicateBuilderImpl<T> implements IMongoQueryPredicateBuilder {
 
-    private static Map<DataTypeEnum, Converter> transformers;
+    private static final Map<DataTypeEnum, Converter> transformers;
 
-    private static Map<DataTypeEnum, List<QueryOperationsEnum>> availableOperations;
+    private static final Map<DataTypeEnum, List<QueryOperationsEnum>> availableOperations;
 
     interface Converter {
         Object convert(String value);
@@ -26,11 +27,12 @@ public class MongoQueryPredicateBuilderImpl<T> implements IMongoQueryPredicateBu
     static {
         transformers = new HashMap<>();
         availableOperations = new HashMap<>();
-        transformers.put(DataTypeEnum.BOOLEAN, (value) -> Boolean.parseBoolean(value));
-        transformers.put(DataTypeEnum.INTEGER, (value) -> Integer.parseInt(value));
-        transformers.put(DataTypeEnum.FLOAT, (value) -> Double.parseDouble(value));
+        transformers.put(DataTypeEnum.BOOLEAN, Boolean::parseBoolean);
+        transformers.put(DataTypeEnum.INTEGER, Integer::parseInt);
+        transformers.put(DataTypeEnum.FLOAT, Double::parseDouble);
         transformers.put(DataTypeEnum.TIME, (value) -> LocalTime.parse(value, DateTimeFormatter.ofPattern("HH:mm:ss")));
         transformers.put(DataTypeEnum.DATE, (value) -> LocalDate.parse(value, DateTimeFormatter.ofPattern("dd-MM-yyyy")));
+        transformers.put(DataTypeEnum.DATETIME, (value) -> LocalDateTime.parse(value, DateTimeFormatter.ofPattern("dd-MM-yyyy'T'HH:mm:ss")));
         transformers.put(DataTypeEnum.STRING, (value) -> value);
 
         List<QueryOperationsEnum> basicOperations = Arrays.asList(
@@ -44,12 +46,16 @@ public class MongoQueryPredicateBuilderImpl<T> implements IMongoQueryPredicateBu
         List<QueryOperationsEnum> basicOperationsWithIn = new ArrayList<>(basicOperations);
         basicOperationsWithIn.add(QueryOperationsEnum.IN);
 
-        availableOperations.put(DataTypeEnum.BOOLEAN, Arrays.asList(QueryOperationsEnum.COND_EQUAL));
+        List<QueryOperationsEnum> stringOperations = new ArrayList<>(basicOperationsWithIn);
+        stringOperations.add(QueryOperationsEnum.COND_EQUAL_CONTAINS);
+
+        availableOperations.put(DataTypeEnum.BOOLEAN, List.of(QueryOperationsEnum.COND_EQUAL));
         availableOperations.put(DataTypeEnum.INTEGER, basicOperationsWithIn);
         availableOperations.put(DataTypeEnum.FLOAT, basicOperations);
         availableOperations.put(DataTypeEnum.TIME, basicOperationsWithIn);
         availableOperations.put(DataTypeEnum.DATE, basicOperationsWithIn);
-        availableOperations.put(DataTypeEnum.STRING, basicOperationsWithIn);
+        availableOperations.put(DataTypeEnum.DATETIME, basicOperationsWithIn);
+        availableOperations.put(DataTypeEnum.STRING, stringOperations);
     }
 
     @Override
@@ -80,38 +86,42 @@ public class MongoQueryPredicateBuilderImpl<T> implements IMongoQueryPredicateBu
         if (!availableOperations.get(dataType).contains(operations))
             throw new RuntimeException("Operation " + mongoQueryDtoPart.getOperator() + " for data type " + mongoQueryDtoPart.getDataType() + " not supported");
 
-        Object value = this.transformers.get(dataType).convert(mongoQueryDtoPart.getValue());
+        Converter conv = transformers.get(dataType);
         Criteria baseCriteria = Criteria.where(mongoQueryDtoPart.getAttribute());
-        Boolean negate = mongoQueryDtoPart.isNegate();
+        boolean negate = mongoQueryDtoPart.isNegate();
 
         if (operations.equals(QueryOperationsEnum.COND_GREATER))
-            return negate ? baseCriteria.not().gt(value) : baseCriteria.gt(value);
+            return negate ? baseCriteria.not().gt(conv.convert(mongoQueryDtoPart.getValue())) : baseCriteria.gt(conv.convert(mongoQueryDtoPart.getValue()));
+        if (operations.equals(QueryOperationsEnum.COND_EQUAL_CONTAINS))
+            return negate ? baseCriteria.not().regex(mongoQueryDtoPart.getValue()) : baseCriteria.regex(mongoQueryDtoPart.getValue());
         else if (operations.equals(QueryOperationsEnum.COND_GREATER_EQUAL))
-            return negate ? baseCriteria.not().gte(value) : baseCriteria.gte(value);
+            return negate ? baseCriteria.not().gte(conv.convert(mongoQueryDtoPart.getValue())) : baseCriteria.gte(conv.convert(mongoQueryDtoPart.getValue()));
         else if (operations.equals(QueryOperationsEnum.COND_LESSER))
-            return negate ? baseCriteria.not().lt(value) : baseCriteria.lt(value);
+            return negate ? baseCriteria.not().lt(conv.convert(mongoQueryDtoPart.getValue())) : baseCriteria.lt(conv.convert(mongoQueryDtoPart.getValue()));
         else if (operations.equals(QueryOperationsEnum.COND_LESSER_EQUAL))
-            return negate ? baseCriteria.not().lte(value) : baseCriteria.lte(value);
+            return negate ? baseCriteria.not().lte(conv.convert(mongoQueryDtoPart.getValue())) : baseCriteria.lte(conv.convert(mongoQueryDtoPart.getValue()));
         else if (operations.equals(QueryOperationsEnum.COND_BETWEEN))
             return negate ? new Criteria()
                     .orOperator(
-                            baseCriteria.lt(value),
-                            Criteria.where(mongoQueryDtoPart.getAttribute()).gt(this.transformers.get(dataType).convert(mongoQueryDtoPart.getValue2()))
+                            baseCriteria.lt(conv.convert(mongoQueryDtoPart.getValue())),
+                            Criteria.where(mongoQueryDtoPart.getAttribute()).gt(conv.convert(mongoQueryDtoPart.getValue2()))
                     )
                     : new Criteria()
                     .andOperator(
-                            baseCriteria.gte(value),
-                            Criteria.where(mongoQueryDtoPart.getAttribute()).lte(this.transformers.get(dataType).convert(mongoQueryDtoPart.getValue2()))
+                            baseCriteria.gte(conv.convert(mongoQueryDtoPart.getValue())),
+                            Criteria.where(mongoQueryDtoPart.getAttribute()).lte(conv.convert(mongoQueryDtoPart.getValue2()))
                     );
-        else if (operations.equals(QueryOperationsEnum.IN))
+        else if (operations.equals(QueryOperationsEnum.IN)) {
+            baseCriteria = negate ? baseCriteria.not() : baseCriteria;
+            List<?> objects = Arrays.stream(mongoQueryDtoPart
+                            .getValue()
+                            .split(mongoQueryDtoPart.getDelimiter())
+                    ).map(conv::convert)
+                    .collect(Collectors.toList());
             return baseCriteria.in(
-                    Arrays.stream(
-                                    mongoQueryDtoPart.getValue()
-                                            .split(mongoQueryDtoPart.getDelimiter())
-                            ).map(x -> this.transformers.get(dataType).convert(x))
-                            .collect(Collectors.toList())
+                    objects
             );
-        else
-            return negate ? baseCriteria.ne(value) : baseCriteria.is(value);
+        } else
+            return negate ? baseCriteria.ne(conv.convert(mongoQueryDtoPart.getValue())) : baseCriteria.is(conv.convert(mongoQueryDtoPart.getValue()));
     }
 }
